<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:minWidth="320dp"
    android:paddingStart="@dimen/dp_32"
    android:paddingTop="@dimen/dp_16"
    android:paddingEnd="@dimen/dp_32"
    android:paddingBottom="@dimen/dp_16">

    <TextView
        android:id="@+id/titleView"
        style="@style/Text22PrimaryMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_title" />

    <TextView
        android:id="@+id/subtitleView"
        style="@style/Text16Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleView"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/fingerprint_scan_continue" />

    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitleView"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/statusImageView"
            android:layout_width="@dimen/info_view_small_icon"
            android:layout_height="@dimen/info_view_small_icon"
            android:contentDescription="@string/fingerprint_touch_sensor"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_fingerprint_input" />

        <TextView
            android:id="@+id/descriptionView"
            style="@style/Text14Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:maxLines="2"
            android:text="@string/fingerprint_touch_sensor" />
    </LinearLayout>

    <TextView
        android:id="@+id/cancelActionView"
        style="@style/Text14VioletMedium"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@+id/statusLayout"
        android:layout_marginTop="@dimen/dp_16"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:lines="1"
        android:minWidth="@dimen/dp_64"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:text="@string/actions_cancel"
        android:textAllCaps="true" />
</RelativeLayout>


