<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white">

    <FrameLayout
        android:id="@+id/topSpace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/passcodeInputView"
        app:layout_constraintVertical_weight="2">

        <ImageView
            android:id="@+id/appLogoView"
            android:layout_width="@dimen/app_logo_image_size"
            android:layout_height="@dimen/app_logo_image_size"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_logo_application" />
    </FrameLayout>

    <com.fentury.applock.widget.passcode.PasscodeInputView
        android:id="@+id/passcodeInputView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topSpace"
        app:layout_constraintVertical_weight="5"/>

    <LinearLayout
        android:id="@+id/resetPasscodeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/resetBackActionImageView"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackground"
            app:srcCompat="@drawable/ic_appbar_action_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/resetContentView"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleView"
                style="@style/Title22"
                android:text="@string/forgot_passcode_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="No entries" />

            <TextView
                android:id="@+id/descriptionView2"
                style="@style/Description18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/forgot_passcode_description"
                tools:text="Made transaction? You will get push notification. Open application, verify the transaction details, and simply authorize your actions." />

            <Button
                android:id="@+id/actionView"
                style="@style/LargeBlueButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/forgot_passcode_log_out"
                android:layout_marginTop="@dimen/dp_24"
                tools:text="Button" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>